fix bugs in header; keep consistent content width
maybe the content width is too small for the home page (and we could
make an exception just for it), but it's very good for page.html and
list.html to have a width remains the same

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -7,6 +7,7 @@
   --purple: hsla(232, 59%, 58%, 1);
   --code-bg: #F3F3F3;
   --border-color: #EEE;
+  --content-width: 768px;
 }
 
 html {
